project/logs/20250528_143616.log
Use Adapter:NVIDIA GeForce RTX 3060 Laptop GPU

FeatureLevel : 12.2

Complete create D3D12Device!!!

Begin CompileShader, path:Object3D.VS.hlsl

Compile Succeeded, path:Object3D.VS.hlsl, profile:vs_6_0

Begin CompileShader, path:Object3D.PS.hlsl

Object3D.PS.hlsl:3:8: error: redefinition of 'Material'
struct Material{
       ^
./object3d.hlsli:7:8: note: previous definition is here
struct Material
       ^

